tests/rosetta/transpiler/Zig/averages-median-3.error
zig build: exit status 1
/tmp/averages-median-3.zig:33:13: error: local variable is never mutated
/tmp/averages-median-3.zig:33:13: note: consider using 'const'
/tmp/averages-median-3.zig:67:9: error: local variable is never mutated
/tmp/averages-median-3.zig:67:9: note: consider using 'const'
